# pineapple-pipeline

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  DOGFOOD_REPORT.md  LICENSE  README.md  RUNBOOK.md  THREAT_MODEL.md  WASTAGE_AUDIT.md  dogfood_kfs_dryrun.py  dogfood_kfs_full.py  e2e_test.py  e2e_test_full.py  pyproject.toml  requirements.txt  test_interrupts.py
.pineapple/: final_test.db
backend/: kfs_manifest_parser.py  kfs_manifest_types.py  kfs_schema_manager.py
docs/: DOGFOOD_KFS_DRYRUN.md  DOGFOOD_KFS_DRYRUN_V2.md  DOGFOOD_KFS_FULL.md  DOGFOOD_KFS_FULL_V2.md  DOGFOOD_LOOP_ITER1.md  DOGFOOD_LOOP_ITER2.md  DOGFOOD_LOOP_ITER3.md  E2E_TEST_EVIDENCE.md  E2E_TEST_FULL_EVIDENCE.md  ENFORCEMENT_SKILLS_SPEC.md  PINEAPPLE_V2_SPEC.md
promptfoo/: promptfooconfig.yaml  run_regression.py
templates/: Dockerfile.fastapi  Dockerfile.vite  cache.py  ci.github-actions.yml  docker-compose.template.yml  env.template  input_guardrails.py  mcp_server.py  observability.py  rate_limiter.py  resilience.py  test_adversarial.py  test_eval_benchmark.py
tests/: test_agents.py  test_apply_pipeline.py  test_cli.py  test_deepeval_layer.py  test_dogfood_simulation.py  test_e2e_phased_orchestrator.py  test_integrations.py  test_kfs_manifest_parser.py  test_kfs_manifest_types.py  test_kfs_schema_manager.py  test_mcp.py  test_pineapple_cleanup.py  test_pineapple_config.py  test_pineapple_doctor.py  test_pineapple_evolve.py  test_pineapple_verify.py  test_pipeline_state.py  test_pipeline_tracer.py  test_templates.py
tools/: apply_pipeline.py  pineapple_audit.py  pineapple_cleanup.py  (+7 more)
(+54 files in other folders)
