[project]
name = "pineapple-pipeline"
version = "1.0.0"
description = "Universal AI-powered development pipeline for production-grade applications"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
doctor = [
    "httpx>=0.27,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]

[tool.ruff]
target-version = "py310"
line-length = 120
