[project]
name = "pineapple-pipeline"
version = "2.0.0-alpha.1"
description = "Agentic development pipeline — LangGraph-based, 10-stage, 26-tool system"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "langgraph>=1.0,<2.0",
    "langchain-core>=0.1",
    "tenacity>=9.0,<10.0",
    "pybreaker>=1.0,<2.0",
]

[project.optional-dependencies]
doctor = [
    "httpx>=0.27,<1.0",
]
llm = [
    "anthropic>=0.40,<1.0",
    "instructor>=1.0,<2.0",
]
observability = [
    "langfuse>=2.0,<3.0",
]
eval = [
    "deepeval>=1.0",
]
mcp = [
    "fastmcp>=0.1",
]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]
all = [
    "pineapple-pipeline[llm,observability,eval,mcp]",
]

[project.scripts]
pineapple = "pineapple.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools", "src"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["templates/"]
